# cockswain-core

./: .env.example  .gitignore  README-core.txt  README.md  docker-compose.yml  update_task_status.sh
ai-core/hybrid-engine-v0.1/: .env.example  README.md  pyproject.toml
ai-core/hybrid-engine-v0.1/core/: bootstrap.py
ai-core/hybrid-engine-v0.1/deploy/systemd/: cockswain-hybrid-engine.service
ai-core/hybrid-engine-v0.1/src/hybrid_engine/: __main__.py  appshim.py  client_memory.py  routes.py  server.py
ai-core/hybrid-engine-v0.1/src/hybrid_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai-core/hybrid-engine-v0.1/src/hybrid_engine/clients/: ollama_client.py
ai-core/hybrid-engine-v0.1/src/hybrid_engine/core/: config.py  store.py
ai-core/hybrid-engine-v0.1/src/hybrid_engine/routers/: bridge.py  embeddings.py  llm.py  llm_chat.py  llm_stream.py
ai-core/mind-proxy-v0.1/: .env.example  Makefile  README.md  pyproject.toml
ai-core/mind-proxy-v0.1/deploy/docker/: Dockerfile
ai-core/mind-proxy-v0.1/deploy/systemd/: cockswain-mind-proxy.service
ai-core/mind-proxy-v0.1/src/mind_proxy/: __main__.py  server.py
ai-core/mind-proxy-v0.1/src/mind_proxy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ai-core/mind-proxy-v0.1/src/mind_proxy/adapters/: http_upstream.py
ai-core/mind-proxy-v0.1/src/mind_proxy/core/: config.py
ai-core/mind-proxy-v0.1/src/mind_proxy/routes/: http.py  schemas.py
ai-core/mind-proxy-v0.1/src/mind_proxy/utils/: logging.py  (+2 more)
ai-core/mind-proxy-v0.1/tests/: test_smoke.py
(+288 files in other folders)
