[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mind-proxy"
version = "0.1.0"
description = "Cockswain mind-proxy: a lightweight gateway between clients and hybrid engines."
authors = [{name="Cockswain", email="devnull@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "redis>=5.0.0",
  "prometheus-client>=0.20.0",
  "python-dotenv>=1.0.1",
  "structlog>=24.1.0"
]

[project.scripts]
mind-proxy = "mind_proxy.__main__:main"
